[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game_Saved.gd" type="Script" id=1]

[node name="Game_Saved" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavedPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -163.0
margin_right = 56.0
margin_bottom = -135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavedContainer" type="VBoxContainer" parent="SavedPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.5
margin_top = 7.0
margin_right = 54.5
margin_bottom = 19.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameSavedLabel" type="Label" parent="SavedPanel/SavedContainer"]
margin_right = 109.0
margin_bottom = 12.0
text = "Game Saved"
align = 1
